@@ -1,5 +1,10 @@
 2007-10-27  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-dialog.c
+		- (get_default_type_for_security): fix crash when using WPA
+
+2007-10-27  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet.c
 		- (nma_send_event_notification): don't show notification bubbles if
 			the status icon isn't visible
